--- a/contracts/TODO.txt
+++ b/contracts/TODO.txt
@@ -10,35 +10,52 @@
     Probably can add a time lock for selling nomins back to the system, but it's awkward, and just makes the futures contract
     slightly longer term.
 
+FEATURES
+========
+* Convert ints to a shared enum type in the vote stuff.
 * Actually freeze nomin balances (override transfer function)
-* Update fee rollover period time thingo
 * Automatically liquidate if collateralisation is below 1:1
-* Fee distribution
+* Update fee rollover period time thingo
+* Confiscation locks the target address balance
+* Actually lock havven transfers if they have voted in something
+* Gas optimisation
+* Factor out functionality into proxy contract for upgrades.
+* ERC777 (if backwards compatible with ERC20)
+* Events for everything
+* Work out whether events should have indexed parameters.
+* Check unchecked sends and so on
+
+CLEANUP
+=======
+* rename "CollateralisedNomin"? (subject to Kain's approval)
 * Split fees for purchase versus sale?
 * ERC20 non-fee version for havvens to inherit from
-* Confiscation locks the target address balance
-* tabs to spaces
 * make sure everything that should be settable has a setter
 * make sure everything that should be SDable is SDable
 * Remove bool returns and just throw inside ERC20FeeToken.sol
+* "Using for" statements where they make sense
+* Fix licence headers
+* Structs where they make sense
 * Check that all calls out to other contracts are checked and handled in case of failure.
 * Ensure that denominators can never be zero.
 * Nomenclature.
-* Events for everything
-* Work out whether events should have indexed parameters.
 * Documentation on members
 * Documentation on functions
 * Documentation on files
-* ERC777 (if backwards compatible with ERC20)
+* Add units where it makes sense
+* tabs to spaces
 * Work out if we can add a fee field to Transfer events and still be ERC20 compliant
-* Gas optimisation
-* Re-verify that ERC20 compliant as per https://github.com/ethereum/EIPs/blob/master/EIPS/eip-20-token-standard.md
-* Compare with linked token implementations (zeppelin, consensys, minime).
-* http://populus.readthedocs.io/en/latest/gotchas.html
-* Factor out functionality into proxy contract for upgrades.
+
+VALIDATION
+==========
+* Test suite.
+* Ensure functions correspond to correct state transitions in confiscation court
+* Fee distribution
 * Consensys best practices compliance.
 * Solium lint.
 * Invariants produced for every function
-* Test suite.
-* Check unchecked sends and so on
-
+* mystake security suggestions
+* etherscan.io bugs
+* Compare with linked token implementations (zeppelin, consensys, minime).
+* http://populus.readthedocs.io/en/latest/gotchas.html
+* Re-verify that ERC20 compliant as per https://github.com/ethereum/EIPs/blob/master/EIPS/eip-20-token-standard.md
