--- a/contracts/TODO.txt
+++ b/contracts/TODO.txt
@@ -12,9 +12,8 @@
 
 FEATURES
 ========
-* Actually freeze nomin balances (override transfer function)
 * Automatically liquidate if collateralisation is below 1:1
-* Update fee rollover period time thingo
+* Update fee rollover period time on state-modifying updates to nomin and havven contracts.
 * get it compiling
 * Events for everything
 * Factor out functionality into proxy contract for upgrades.
