Fixed nomin constructor. Only 9.3 million gas to deploy.

--- a/contracts/TODO.txt
+++ b/contracts/TODO.txt
@@ -5,6 +5,7 @@ FEATURES
 
 CLEANUP
 =======
+* Reentrancy checks
 * Decide what to do about fallback functions
 * Proper docstring/javadoc style comments, parameter descriptions
 * http://solidity.readthedocs.io/en/latest/style-guide.html
