--- a/contracts/TODO.txt
+++ b/contracts/TODO.txt
@@ -4,6 +4,13 @@ FEATURES
 * Factor out functionality from state, into proxy contract, for upgrades.
 * Determine how to get tokens into contract and working with vesting schedules that still accrue fees.
 * Confirm with Kain final values for all contract parameters.
+* setVotedYea, Nay, CancelVote update from onlyNomin to onlyCourt
+* Do nothing on vote for 0 havven balance accounts
+* Ensure that no transfers TO havven accounts that have voted is allowed
+* Consider fee-based voting weights (augment fee info into pairs, so we use the previous-previous completed fee entitlement).
+    Note that this would require dividing by the fees taken in the previous-previous period in order to compute participation, so this must be saved as well.
+* payable fallback function
+* Allow to sell in liquidation even if the price is stale
 
 CLEANUP
 =======
@@ -30,7 +37,7 @@ CLEANUP
 * make sure everything that should be settable has a setter
 * make sure everything that should be SDable is SDable
 * make sure everything that needs an event has one
-* Work out which event parameters should be indexed.
+* Work out which event parameters should be indexed (whether to add secondary fields to store actual value.).
 * "Using for" statements where they make sense
 * Structs where they make sense
 * Check that all calls out to other contracts are checked and handled in case of failure.
@@ -66,6 +73,7 @@ VALIDATION
 * http://populus.readthedocs.io/en/latest/gotchas.html
 * Re-verify that ERC20 compliant as per https://github.com/ethereum/EIPs/blob/master/EIPS/eip-20-token-standard.md
 * Joel + Mike + Dom + Sam + Matt contract read-through
+* withdrawFeeEntitlement - test limits of multiplicaiton
 
 MISC
 ====
@@ -80,3 +88,6 @@ MISC
     Probably can add a time lock for selling nomins back to the system, but it's awkward, and just makes the futures contract
     slightly longer term.
 
+EXTENSIONS
+==========
+* withdrawal of your fees into a separate destination account
