--- a/contracts/TODO.txt
+++ b/contracts/TODO.txt
@@ -1,9 +1,9 @@
 FEATURES
 ========
-* Modify liquidation sell to return a fraction of remaining eth if not enough USD in the system. (maybe autoliquidate on burn/issue/buy/sell now actually)
 * Factor out functionality from state, into proxy contract, for upgrades.
 * Determine how to get tokens into contract and working with vesting schedules that still accrue fees.
 * Confirm with Kain final values for all contract parameters.
+* Determine if intToDec calls are necessary.
 * setVotedYea, Nay, CancelVote update from onlyNomin to onlyCourt
 * Ensure that no transfers TO havven accounts that have voted is allowed
 * Consider fee-based voting weights (augment fee info into pairs, so we use the previous-previous completed fee entitlement).
