--- a/contracts/TODO.txt
+++ b/contracts/TODO.txt
@@ -5,9 +5,12 @@ FEATURES
 * Confirm with Kain final values for all contract parameters.
 * Switch fee to 20 basis points
 * Increase duration of fee period to 1 month.
+* name of nomins to ethernomins
 
 CLEANUP
 =======
+* Switch to concise contract in testing suite if possible
+* Ensure the deploy script actually optimises the files when compiling.
 * NatSpec doc https://github.com/ethereum/wiki/wiki/Ethereum-Natural-Specification-Format https://github.com/ethereum/wiki/wiki/Natspec-Example
 * make sure everything that should be settable has a setter
 * make sure everything that should not be settable does not have a setter
